--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,16 +8,18 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-        <link href="/static/styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="/static/styles.css">
     </head>
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Forum</a>
+      {% if session["user_id"] %}
+        <a class="navbar-brand" href="/">
+          Forum
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             
@@ -41,10 +43,25 @@
           </ul>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Log Out </a>
+              <a class="nav-link" href="/logout">Log Out </a>
             </li>
           </ul>
         </div>
+        {% else %}
+        
+        <a class="navbar-brand" href="/">
+           Forum
+        </a>
+
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/login">Log In </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/register">Register </a>
+          </li>
+        </ul>
+        {% endif %}
       </nav>
 
 
