--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      {% if session["user_id"] %}
+      {% if session["user_id"] and session["user_type"] ==  "student" %}
         <a class="navbar-brand" href="/">
           Forum
         </a>
@@ -42,6 +42,47 @@
             </li>
           </ul>
           <ul class="navbar-nav ms-auto">
+            <li class="nav-item active">
+              <a href="/join_class" class="nav-link"> Join Class</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/logout">Log Out </a>
+            </li>
+          </ul>
+        </div>
+        {% elif session["user_id"] and session["user_type"] ==  "teacher" %}
+        <a class="navbar-brand" href="/">
+          Forum
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Classes
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href=" #">class 1</a>
+                <a class="dropdown-item" href="#">class 2</a>
+                <a class="dropdown-item" href="#">class 3</a>
+              </div>
+            </li>
+
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Disscussion Board </a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Post</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item active">
+              <a href="/create_class" class="nav-link"> Create Class</a>
+            </li>
             <li class="nav-item active">
               <a class="nav-link" href="/logout">Log Out </a>
             </li>
