cleaned up files and added a date/time chronology system to posts

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,9 @@
                   <input type = "hidden" name = "code" value = "{{ class[1] }}"/>
                   <button class="btn btn-primary" type="submit" value="Submit"> Enter </button>
                 </form>
+                <form action="/" method="post">
+                  <button type="submit" class="btn btn-link" name="leave_class_code" value = "{{ class[1] }}">Leave Class</button>
+                </form>
               </div>
             </div>
         </div>
