--- a/templates/course.html
+++ b/templates/course.html
@@ -37,7 +37,13 @@
     {% for post in discussion %}
       <div class="col-6">
         <div class="card">
-            <h4 class="card-header" style="text-align: left;">{{ post[0] }} says:</h3>
+            <div class="card-header">
+              <div style="float: left;">
+                <h4 style="text-align: left; margin: 0;">{{ post[0] }} says:</h4>
+              </div>
+              <div style="float:right;"><p style="text-align: right; font-size: 14px; margin: 0;">{{ post[3] }} {{ post[4] }}</p>
+              </div>     
+            </div>
             <h5 class = "card-title" style="text-align: left;">{{ post[1] }}</h4>
             <p class="card-body" style="text-align: left;">{{ post[2] }}</p>
         </div>
