--- a/templates/join_class.html
+++ b/templates/join_class.html
@@ -7,8 +7,8 @@
 {% block main %}
     <form action="/join_class" method="post">
         <div class="form-group">
-            <label for="class_code">Class Code</label>
-            <input type="class_code" class="form-control" id="class_code" name = "class_code" placeholder="Code">
+            <label for="class-code">Class Code</label>
+            <input type="class-code" class="form-control" id="class-code" name = "class-code" placeholder="Code">
         </div>
     </form>
 {% endblock %}
