--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,107 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8"></i>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}{% endblock %}</title>
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-        <link href="./output.css" rel="stylesheet">
+        <link rel="stylesheet" href="../static/main.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+        <Title>Forum</Title>
     </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar">
       {% if session["user_id"] and session["user_type"] ==  "student" %}
-        <a class="navbar-brand" href="/">
-          Forum
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Classes
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href=" #">class 1</a>
-                <a class="dropdown-item" href="#">class 2</a>
-                <a class="dropdown-item" href="#">class 3</a>
-              </div>
-            </li>
-
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Disscussion Board </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Post</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item active">
-              <a href="/join_class" class="nav-link"> Join Class</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/logout">Log Out </a>
-            </li>
-          </ul>
+        <div class="nav-links">
+          <i class="bi bi-hurricane"></i>
+          <a class="navbar-brand" href="/">ClassQuery</a>   
+          <a class="nav-link" href="/logout">Log Out </a>
+          <a class="nav-link" href="/join_class"> Join Class</a>
         </div>
         {% elif session["user_id"] and session["user_type"] ==  "teacher" %}
-        <a class="navbar-brand" href="/">
-          Forum
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Classes
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href=" #">class 1</a>
-                <a class="dropdown-item" href="#">class 2</a>
-                <a class="dropdown-item" href="#">class 3</a>
-              </div>
-            </li>
-
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Disscussion Board </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Post</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item active">
-              <a href="/create_class" class="nav-link"> Create Class</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/logout">Log Out </a>
-            </li>
-          </ul>
+        <div class="nav-links">
+          <i class="bi bi-hurricane"></i>
+          <a class="navbar-brand" href="/">ClassQuery</a>   
+          <a class="nav-link" href="/logout">Log Out </a>
+          <a class="nav-link" href="/create_class"> Create Class</a>
         </div>
         {% else %}
-        
-        <a class="navbar-brand" href="/">
-           Forum
-        </a>
-
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/login">Log In </a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/register">Register </a>
-          </li>
-        </ul>
+        <div class="nav-links">
+          <i class="bi bi-hurricane"></i>
+          <a class="navbar-brand" href="/">ClassQuery</a>   
+          <a class="nav-link" href="/register">Register</a>
+          <a class="nav-link" href="/login">Log In</a>
+        </div>
         {% endif %}
       </nav>
 
