--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                 <p class="card-text">{{ class[3] }}</p>
                 <form action="/course" method="post">
                   <input type = "hidden" name = "code" value = "{{ class[1] }}"/>
-                  <button class="btn btn-primary" type="submit" value="Submit"> Enter </button>
+                  <button class="create-post-button" type="submit" value="Submit"> Enter </button>
                 </form>
                 <form action="/" method="post">
                   <button type="submit" class="btn btn-link" name="leave-class-code" value = "{{ class[1] }}">Leave Class</button>
