--- a/templates/join_class.html
+++ b/templates/join_class.html
@@ -12,4 +12,10 @@
             <button class="submit-button" id = "join-class-button">Enter Code</button>
         </div>
     </form>
+    <form action="/join_class" method="post">
+        <input type="hidden" name="class-code" value="0">
+        <div class="demo-container">
+            <p>**or join <button id="link-btn">this</button> demo class**</p>
+        </div>
+    </form>
 {% endblock %}
